--- a/prop-bl-test.ioc
+++ b/prop-bl-test.ioc
@@ -26,33 +26,46 @@ Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_MEDIUM
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=ADC1
-Dma.RequestsNb=1
+Dma.Request1=SPI1_RX
+Dma.RequestsNb=2
+Dma.SPI1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.1.Instance=DMA1_Channel2
+Dma.SPI1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.1.Mode=DMA_NORMAL
+Dma.SPI1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.1.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
+Mcu.IP10=USB_DEVICE
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
 Mcu.IP5=SYS
 Mcu.IP6=TIM1
 Mcu.IP7=TIM2
-Mcu.IP8=USB
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=10
+Mcu.IP8=TIM3
+Mcu.IP9=USB
+Mcu.IPNb=11
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
 Mcu.Pin10=PA15
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
+Mcu.Pin11=PB3
+Mcu.Pin12=PB4
 Mcu.Pin13=VP_ADC1_TempSens_Input
 Mcu.Pin14=VP_ADC1_Vref_Input
 Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin17=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM3_VS_no_output1
+Mcu.Pin19=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PB0
 Mcu.Pin3=PB1
 Mcu.Pin4=PB11
@@ -61,7 +74,7 @@ Mcu.Pin6=PA11
 Mcu.Pin7=PA12
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=18
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -69,6 +82,7 @@ MxCube.Version=4.27.0
 MxDb.Version=DB.4.0.270
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -77,6 +91,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA11.Mode=Device
@@ -92,10 +107,11 @@ PA8.Signal=S_TIM1_CH1
 PB0.Signal=ADCx_IN8
 PB1.Signal=ADCx_IN9
 PB11.Signal=GPXTI11
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
+PB3.Locked=true
+PB3.Mode=RX_Only_Simplex_Unidirect_Master
+PB3.Signal=SPI1_SCK
+PB4.Mode=RX_Only_Simplex_Unidirect_Master
+PB4.Signal=SPI1_MISO
 PCC.Checker=false
 PCC.Line=STM32F103
 PCC.MCU=STM32F103C(8-B)Tx
@@ -135,7 +151,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreqValue=9000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV4
 RCC.AHBFreq_Value=72000000
@@ -170,11 +186,25 @@ SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_ETR,ClockSourceETR_Mode2
 SH.S_TIM2_CH1_ETR.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.CLKPolarity=SPI_POLARITY_LOW
+SPI1.CalculateBaudRate=562.5 KBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES_RXONLY
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase,CLKPolarity
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1
 TIM1.Period=2500
 TIM1.Prescaler=72
 TIM1.Pulse-PWM\ Generation1\ CH1=800
+TIM3.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM3.IPParameters=Prescaler,Channel-Output Compare1 No Output,OCMode_1,Pulse-Output Compare1 No Output,Period
+TIM3.OCMode_1=TIM_OCMODE_ACTIVE
+TIM3.Period=100
+TIM3.Prescaler=64
+TIM3.Pulse-Output\ Compare1\ No\ Output=50
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
@@ -187,6 +217,10 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM3_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
